# taskmate-cli

./: .env.example  .gitignore  .npmignore  ANALISI_PROGETTO.md  ARCHITECTURE.md  CHANGELOG.md  CONTEXT_IMPROVEMENTS.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INKUI_MIGRATION_PLAN.md  LICENSE  MIGRATION.md  OPEN_SOURCE_PLAN.md  PROJECT_ANALYSIS.md  README.md  RENAME_INSTRUCTIONS.md  SECURITY.md  debug_config.py  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test_advanced_ui.py  test_document.md  test_llm_integration.py  test_markdown_parser.py  test_read_command.py  test_session_commands.py  test_session_workflow.py  test_todoist_integration.py  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: api_metadata.json  calibration_data.json  usage.json
data/sessions/: session_1761225588604_lupcm6gwp.json  session_1761227973887_gzlaey3po.json  session_1761228043588_dqj7fpg1c.json  session_1761228247599_6702i4n0j.json  session_1761228297083_43dsz936y.json  session_1761228496347_aikz8nc5v.json  session_1761228577486_oc6114jfy.json  session_1761228788510_yfeh2ysds.json  session_1761228797897_xxdk1bz0k.json  session_1761228849274_lut6mn1kc.json  session_1761228974537_udvik2tie.json  session_1761228997691_yw8kl4msc.json  session_1761229007953_1bu8yebwd.json  session_1761229057543_p0pdyfzt2.json  session_1761229081298_37zca6jfo.json  session_1761229279592_2ubm7v5pw.json  session_1761230664152_voimg2qj4.json  session_1761231137511_qnpvk9niv.json  session_1761231377257_jnc1s6pbd.json
docs/: API_REFERENCE.md  README.md  SERVICES_GUIDE.md  TROUBLESHOOTING.md
src/: App.tsx  __init__.py  index.tsx  main.py
src/cli/: __init__.py  advanced_ui.py  app.py  commands.py  repl.py  rich_ui.py  simple_ui.py  splash.py  ui.py
src/commands/: InitCommand.ts
src/components/: ChatInterface.tsx  CommandMenu.tsx  ContentArea.tsx  ContextIndicator.tsx  InputArea.tsx  LoadingIndicator.tsx  ProgressiveLoader.tsx  ProjectTable.tsx  SessionSelector.tsx  SplashScreen.tsx  TaskTable.tsx  Transform.tsx
src/config/: ModelLimits.ts  __init__.py  exceptions.py  settings.py  validator.py
src/llm/: __init__.py  base.py  claude.py  gemini.py  manager.py
src/markdown/: __init__.py  context.py  parser.py
src/prompts/: multilingualTemplates.ts  templates.ts
src/services/: APIMetadataService.ts  CommandHandler.ts  ContextManager.ts  CostMonitor.ts  DatabaseService.ts  EnhancedContextManager.ts  EnhancedUserContextService.ts  LLMService.ts  ModelManager.ts  SessionManager.ts  TodoistAIService.ts  TodoistService.ts  TokenCounter.ts  UserContextService.ts  UserProfileService.ts
src/session/: __init__.py  models.py  repository.py  service.py
src/tests/: APIMetadataService.test.ts  ContextManager.test.ts  CostMonitor.test.ts  DatabaseService.test.ts  LLMService.test.ts  ModelManager.test.ts  SessionManager.integration.test.ts  SessionManager.test.ts  TestableSessionManager.ts  TodoistAIService.test.ts  TodoistService.test.ts  TokenCounter.test.ts  cli.test.ts  integration.test.ts
src/todoist/: __init__.py  api.py  (+2 more)
test-integration-data/: api_metadata.json  calibration_data.json
tests/: __init__.py
(+19 files in other folders)
